--- a/Fireworks Engine/Sandbox/Sandbox.vcxproj
+++ b/Fireworks Engine/Sandbox/Sandbox.vcxproj
@@ -149,6 +149,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="examples\HungryBox.h" />
+    <ClInclude Include="examples\LightSaber.h" />
     <ClInclude Include="examples\SimpleBox.h" />
     <ClInclude Include="examples\textureImages.h" />
   </ItemGroup>
