--- a/Fireworks Engine/Sandbox/Sandbox.vcxproj.filters
+++ b/Fireworks Engine/Sandbox/Sandbox.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="examples\LightSaber.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="examples\groupsdemo.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
