feat:IDK what changes I made but nothing is broken

--- a/Fireworks Engine/Sandbox/imgui.ini
+++ b/Fireworks Engine/Sandbox/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1330,821
+Size=1200,800
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,7 +10,7 @@ Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=0,19
-Size=358,802
+Size=213,781
 Collapsed=0
 DockId=0x00000003,0
 
@@ -40,42 +40,56 @@ Size=500,440
 Collapsed=0
 
 [Window][Scene View]
-Pos=360,19
-Size=702,387
+Pos=215,19
+Size=704,402
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000001,0
 
 [Window][Stats]
-Pos=1064,219
-Size=266,602
+Pos=921,220
+Size=279,123
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000009,0
 
 [Window][Example: Log]
-Pos=360,408
-Size=702,413
+Pos=215,423
+Size=704,377
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][Inspector]
+Pos=921,19
+Size=279,199
 Collapsed=0
 DockId=0x00000006,0
 
-[Window][Inspector]
-Pos=1064,19
-Size=266,198
-Collapsed=0
-DockId=0x00000007,0
-
 [Window][Example: Console]
+Pos=278,408
+Size=654,392
+Collapsed=0
+DockId=0x3BC79352,0
+
+[Window][Camera 2D]
+Pos=921,345
+Size=279,455
+Collapsed=0
+DockId=0x0000000A,0
+
+[Window][Example: Property editor]
 Pos=60,60
-Size=520,600
+Size=430,450
 Collapsed=0
 
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,19 Size=1330,802 Split=X
-  DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=323,781 Selected=0xE927CF2F
-  DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=875,781 Split=X
-    DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=702,781 Split=Y
-      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=1200,387 Selected=0x71B61B7A
-      DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=1200,392 CentralNode=1 Selected=0xBF126D42
-    DockNode    ID=0x00000001 Parent=0x00000004 SizeRef=266,781 Split=Y Selected=0xF02CD328
-      DockNode  ID=0x00000007 Parent=0x00000001 SizeRef=221,193 Selected=0xF02CD328
-      DockNode  ID=0x00000008 Parent=0x00000001 SizeRef=221,586 Selected=0x968648AE
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,19 Size=1200,781 Split=X
+  DockNode      ID=0x00000008 Parent=0x3BC79352 SizeRef=919,781 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000008 SizeRef=213,781 Selected=0xE927CF2F
+    DockNode    ID=0x00000004 Parent=0x00000008 SizeRef=704,781 Split=Y
+      DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=1200,402 Selected=0x71B61B7A
+      DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=1200,377 CentralNode=1 Selected=0xBF126D42
+  DockNode      ID=0x00000005 Parent=0x3BC79352 SizeRef=279,781 Split=Y
+    DockNode    ID=0x00000006 Parent=0x00000005 SizeRef=266,199 Selected=0xF02CD328
+    DockNode    ID=0x00000007 Parent=0x00000005 SizeRef=266,580 Split=Y Selected=0x968648AE
+      DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=279,123 Selected=0x968648AE
+      DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=279,455 Selected=0x0B0B8C54
 
