Feat : Done with game

--- a/Fireworks Engine/LD47/LD47.vcxproj
+++ b/Fireworks Engine/LD47/LD47.vcxproj
@@ -149,6 +149,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MainGame.h" />
+    <ClInclude Include="src\AABBCollisionManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
