--- a/Fireworks Engine/LD47/LD47.vcxproj.filters
+++ b/Fireworks Engine/LD47/LD47.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="MainGame.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\AABBCollisionManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
