feat:Added animated sprites, need to refactor some API for better useability, animated sprites are working fine

--- a/Fireworks Engine/Sandbox/Sandbox.vcxproj
+++ b/Fireworks Engine/Sandbox/Sandbox.vcxproj
@@ -167,6 +167,7 @@
     <ClInclude Include="Test Dependencies\imgui-docking\imstb_rectpack.h" />
     <ClInclude Include="Test Dependencies\imgui-docking\imstb_textedit.h" />
     <ClInclude Include="Test Dependencies\imgui-docking\imstb_truetype.h" />
+    <ClInclude Include="test\animatedSpritesTest.h" />
     <ClInclude Include="test\testFBO.h" />
     <ClInclude Include="test\testGUI.h" />
   </ItemGroup>
