breaking changes!: Major refactoring to API and BatchRenderer2D and rendering pipeline

--- a/Fireworks Engine/Sandbox/Sandbox.vcxproj
+++ b/Fireworks Engine/Sandbox/Sandbox.vcxproj
@@ -158,6 +158,7 @@
     <ClInclude Include="examples\groupsdemo.h" />
     <ClInclude Include="examples\HungryBox.h" />
     <ClInclude Include="examples\LightSaber.h" />
+    <ClInclude Include="examples\BunnysJourney.h" />
     <ClInclude Include="examples\SimpleBox.h" />
     <ClInclude Include="examples\textureImages.h" />
     <ClInclude Include="Test Dependencies\glm\common.hpp" />
