--- a/Fireworks Engine/Sandbox/imgui.ini
+++ b/Fireworks Engine/Sandbox/imgui.ini
@@ -10,9 +10,9 @@ Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=0,19
-Size=213,781
+Size=325,781
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000001,0
 
 [Window][Example: Custom rendering]
 Pos=-6,94
@@ -40,14 +40,14 @@ Size=500,440
 Collapsed=0
 
 [Window][Scene View]
-Pos=215,19
-Size=704,402
+Pos=327,19
+Size=567,387
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000002,0
 
 [Window][Stats]
-Pos=921,220
-Size=279,123
+Pos=896,220
+Size=304,123
 Collapsed=0
 DockId=0x00000009,0
 
@@ -55,11 +55,11 @@ DockId=0x00000009,0
 Pos=215,423
 Size=704,377
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000008,0
 
 [Window][Inspector]
-Pos=921,19
-Size=279,199
+Pos=896,19
+Size=304,199
 Collapsed=0
 DockId=0x00000006,0
 
@@ -70,8 +70,8 @@ Collapsed=0
 DockId=0x3BC79352,0
 
 [Window][Camera 2D]
-Pos=921,345
-Size=279,455
+Pos=896,345
+Size=304,455
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -81,15 +81,15 @@ Size=430,450
 Collapsed=0
 
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,19 Size=1200,781 Split=X
-  DockNode      ID=0x00000008 Parent=0x3BC79352 SizeRef=919,781 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000008 SizeRef=213,781 Selected=0xE927CF2F
-    DockNode    ID=0x00000004 Parent=0x00000008 SizeRef=704,781 Split=Y
-      DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=1200,402 Selected=0x71B61B7A
-      DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=1200,377 CentralNode=1 Selected=0xBF126D42
-  DockNode      ID=0x00000005 Parent=0x3BC79352 SizeRef=279,781 Split=Y
-    DockNode    ID=0x00000006 Parent=0x00000005 SizeRef=266,199 Selected=0xF02CD328
-    DockNode    ID=0x00000007 Parent=0x00000005 SizeRef=266,580 Split=Y Selected=0x968648AE
-      DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=279,123 Selected=0x968648AE
-      DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=279,455 Selected=0x0B0B8C54
+DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,19 Size=1200,781 Split=X
+  DockNode        ID=0x00000001 Parent=0x3BC79352 SizeRef=325,781 Selected=0xE927CF2F
+  DockNode        ID=0x00000004 Parent=0x3BC79352 SizeRef=873,781 Split=X
+    DockNode      ID=0x00000008 Parent=0x00000004 SizeRef=567,781 Split=Y
+      DockNode    ID=0x00000002 Parent=0x00000008 SizeRef=803,387 Selected=0x71B61B7A
+      DockNode    ID=0x00000003 Parent=0x00000008 SizeRef=803,392 CentralNode=1
+    DockNode      ID=0x00000005 Parent=0x00000004 SizeRef=304,781 Split=Y
+      DockNode    ID=0x00000006 Parent=0x00000005 SizeRef=266,199 Selected=0xF02CD328
+      DockNode    ID=0x00000007 Parent=0x00000005 SizeRef=266,580 Split=Y Selected=0x968648AE
+        DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=279,123 Selected=0x968648AE
+        DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=279,455 Selected=0x0B0B8C54
 
