--- a/Fireworks Engine/Sandbox/Sandbox.vcxproj
+++ b/Fireworks Engine/Sandbox/Sandbox.vcxproj
@@ -116,7 +116,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions);GLEW_STATIC;_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(PROJECT_DIR)../../Dependencies/PNG/include;$(PROJECT_DIR)../../Dependencies/SOIL/include;$(PROJECT_DIR)../../Dependencies/GLFW/include;$(PROJECT_DIR)../../Dependencies/GLEW/include;$(PROJECT_DIR)../Fireworks Core/;$(PROJECT_DIR)Test Dependencies</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(PROJECT_DIR)../../Dependencies/PNG/include;$(PROJECT_DIR)../../Dependencies/SOIL/include;$(PROJECT_DIR)../../Dependencies/GLFW/include;$(PROJECT_DIR)../../Dependencies/GLEW/include;$(PROJECT_DIR)../../Dependencies/FreeType/include;$(PROJECT_DIR)../Fireworks Core/;$(PROJECT_DIR)Test Dependencies</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -453,6 +453,7 @@
     <ClInclude Include="Test Dependencies\imgui-docking\imstb_truetype.h" />
     <ClInclude Include="test\animatedSpritesTest.h" />
     <ClInclude Include="test\camImplementation.h" />
+    <ClInclude Include="test\fontTest.h" />
     <ClInclude Include="test\instantspritedraw.h" />
     <ClInclude Include="test\testFBO.h" />
     <ClInclude Include="test\testGUI.h" />
