--- a/Fireworks Engine/Sandbox/Sandbox.vcxproj.filters
+++ b/Fireworks Engine/Sandbox/Sandbox.vcxproj.filters
@@ -950,6 +950,9 @@
     <ClInclude Include="examples\TextGuru.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="test\audiotest.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Test Dependencies\glm\detail\func_common.inl">
