--- a/Fireworks Engine/Sandbox/Sandbox.vcxproj
+++ b/Fireworks Engine/Sandbox/Sandbox.vcxproj
@@ -162,6 +162,7 @@
     <ClInclude Include="examples\SimpleBox.h" />
     <ClInclude Include="examples\TextGuru.h" />
     <ClInclude Include="examples\textureImages.h" />
+    <ClInclude Include="examples\Zapper.h" />
     <ClInclude Include="Test Dependencies\glm\common.hpp" />
     <ClInclude Include="Test Dependencies\glm\detail\compute_common.hpp" />
     <ClInclude Include="Test Dependencies\glm\detail\compute_vector_relational.hpp" />
