--- a/Fireworks Engine/Sandbox/Sandbox.vcxproj
+++ b/Fireworks Engine/Sandbox/Sandbox.vcxproj
@@ -458,6 +458,7 @@
     <ClInclude Include="test\audiotest.h" />
     <ClInclude Include="test\camImplementation.h" />
     <ClInclude Include="test\fontTest.h" />
+    <ClInclude Include="test\EditorGUI.h" />
     <ClInclude Include="test\instantspritedraw.h" />
     <ClInclude Include="test\phyTest.h" />
     <ClInclude Include="test\testFBO.h" />
