--- a/Fireworks Engine/Sandbox/Sandbox.vcxproj.filters
+++ b/Fireworks Engine/Sandbox/Sandbox.vcxproj.filters
@@ -962,6 +962,9 @@
     <ClInclude Include="examples\RockyDocky.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="test\EditorGUI.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Test Dependencies\glm\detail\func_common.inl">
