feat:Done with example and refactoring the renderes and renderbales to reflect the changes made by the rigidbody component

--- a/Fireworks Engine/Sandbox/Sandbox.vcxproj
+++ b/Fireworks Engine/Sandbox/Sandbox.vcxproj
@@ -465,6 +465,7 @@
     <ClInclude Include="test\testGUI.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="shaders\fade.frag" />
     <None Include="Test Dependencies\glm\detail\func_common.inl" />
     <None Include="Test Dependencies\glm\detail\func_common_simd.inl" />
     <None Include="Test Dependencies\glm\detail\func_exponential.inl" />
